<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.HomeActivity"
    android:orientation="vertical"
    android:background="@color/layout_background_color">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weatherLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_avatar"
                android:layout_width="@dimen/avatar_image_size"
                android:layout_height="@dimen/avatar_image_size"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:padding="@dimen/spacing_xSmall"
                android:src="@drawable/image_avatar"
                android:elevation="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:strokeColor="@color/stroke_color"
                app:strokeWidth="@dimen/spacing_xSmall" />

            <TextView
                android:id="@+id/textViewCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="Gaza"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/font_size_title_x_large"
                app:layout_constraintBottom_toBottomOf="@+id/image_avatar"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/icon_more"
                app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_location" />

            <ImageView
                android:id="@+id/icon_more"
                android:layout_width="@dimen/avatar_image_size"
                android:layout_height="@dimen/avatar_image_size"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:background="@drawable/bacground_circle"
                android:padding="@dimen/spacing_medium"
                android:src="@drawable/ic_more"
                android:elevation="@dimen/spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:background="@drawable/background_card"
                app:layout_constraintTop_toBottomOf="@+id/image_avatar"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="21°"
                    android:textColor="@color/text_primary_white_color"
                    android:textSize="@dimen/font_size_title_xx_large"
                    app:layout_constraintEnd_toEndOf="@+id/textViewFeelsLike"
                    app:layout_constraintStart_toStartOf="@+id/textCloud"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/cloud_image" />

                <TextView
                    android:id="@+id/textViewCityName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Gaza,"
                    android:textColor="@color/text_primary_white_color"
                    android:textSize="@dimen/font_size_title_x_large"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textViewCountryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="PS"
                    android:textColor="@color/text_primary_white_color"
                    android:textSize="@dimen/font_size_title_x_large"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewCityName2"
                    app:layout_constraintStart_toEndOf="@+id/textViewCityName2" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:text="@string/test_date"
                    android:textColor="@color/text_secondary_white_color"
                    android:textSize="@dimen/font_size_body"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textViewCountryName"
                    app:layout_constraintStart_toStartOf="@+id/textViewCityName2"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCityName2" />

                <TextView
                    android:id="@+id/textCloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_xSmall"
                    android:text="@string/feels_like"
                    android:textColor="@color/text_secondary_white_color"
                    android:textSize="@dimen/font_size_caption"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewFeelsLike"
                    app:layout_constraintEnd_toStartOf="@+id/textViewFeelsLike" />

                <TextView
                    android:id="@+id/textViewFeelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:text="26°"
                    android:textColor="@color/text_secondary_white_color"
                    android:textSize="@dimen/font_size_caption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/avatar_image_size"
                    android:layout_height="@dimen/avatar_image_size"
                    android:layout_marginEnd="@dimen/spacing_small"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintEnd_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                    app:srcCompat="@drawable/ic_nowflake" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/avatar_image_size"
                    android:layout_height="@dimen/avatar_image_size"
                    android:layout_marginEnd="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCloud"
                    app:srcCompat="@drawable/ic_placeholder_wind" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textAirQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/suggest_for_you"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/font_size_title_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@drawable/background_dash_line"
                app:layout_constraintTop_toBottomOf="@+id/textAirQuality"
                app:shapeAppearanceOverlay="@style/reduceImageView">

            </com.google.android.material.imageview.ShapeableImageView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButton"
                android:layout_width="match_parent"
                android:layout_height="52sp"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@drawable/background_card"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/get_wear"
                android:textAllCaps="false"
                android:textColor="@color/text_primary_white_color"
                android:textSize="@dimen/font_size_title_medium"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <include
                layout="@layout/aire_quality_card"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="@dimen/spacing_medium"

                android:layout_marginBottom="24dp"
                android:layout_marginTop="@dimen/spacing_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="184dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>